Fixed horizontal scroll bar issue

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -251,6 +251,6 @@ ul.employees_info {}
   ul.subnav {
   	float: left;
 	  margin-left: -17px;
-	  width: 940px;
+	  width: auto;
   }
 
